apres liens  mais pas propre

--- a/cv.html
+++ b/cv.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="page">
-        <div class="infophoto">
+        <div class="infophotoliens">
             <div class="info">
                 <p><strong>Andreea VILLATTE</strong><br/>
                 Développeur Web</p>
@@ -19,6 +19,12 @@
                 andreea.villatte@gmail.com</p>
                 <p>Permis B (voiture)</p>
             </div>
+            <div class="liens">
+                    <a href="https://github.com/andreeavillatte">Visit my Github</a>
+                    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+                    <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="light" data-vanity="andreea-villatte-49755226"><a class="LI-simple-link" href='https://ro.linkedin.com/in/andreea-britchi-49755226?trk=profile-badge'>Andreea Britchi</a></div>
+                </div>
+    
             <div class="photo">
                 <img src="website/Memento/assets/img/photo-cv.png" alt="Photo CV Andreea Villatte" style="width:128px;height:128px;"/>
             </div>
@@ -116,8 +122,8 @@
                     </div>    
                 </div>
             </div>    
-            <div class="section">
-                <div class="publications">
+            <div class="publications">
+                <div class="section">
                     <h2>PUBLICATIONS, PRIX & CENTRES D'INTERET</h2>
                     <div class="sec-gauche">
                         <p>2017</p>
