--- a/cv.html
+++ b/cv.html
@@ -10,140 +10,160 @@
 </head>
 <body>
     <div class="page">
-        <div class="infophotoliens">
-            <div class="info">
-                <p><strong>Andreea VILLATTE</strong><br/>
-                Développeur Web</p>
-                <p>80000 Amiens <br/>
-                +33 6 95 91 42 12 <br/>
-                andreea.villatte@gmail.com</p>
-                <p>Permis B (voiture)</p>
-            </div>
-            <div class="liens">
-                    <a href="https://github.com/andreeavillatte">Visit my Github</a>
-                    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
-                    <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="light" data-vanity="andreea-villatte-49755226"><a class="LI-simple-link" href='https://ro.linkedin.com/in/andreea-britchi-49755226?trk=profile-badge'>Andreea Britchi</a></div>
+        <header>
+            <div class="conteneurheader">
+                <div class="info">
+                    <p><strong>Andreea VILLATTE</strong><br/>
+                    Développeur Web</p>
+                    <p>80000 Amiens <br/>
+                    +33 6 95 91 42 12 <br/>
+                    andreea.villatte@gmail.com</p>
+                    <p>Permis B (voiture)</p>
                 </div>
-    
-            <div class="photo">
-                <img src="website/Memento/assets/img/photo-cv.png" alt="Photo CV Andreea Villatte" style="width:128px;height:128px;"/>
-            </div>
-        </div>
-        <div id="conteneur1">
-            <div class="formation">
-                <div class="section">
-                    <h2>FORMATION</h2>
-                    <div class="sec-gauche" id="forma-gauche">
-                        <p>2019</p>
-                        <p>2012</p>
-                        <p>2011</p>
-                        <p>2008</p>
-                        <p>2008</p>
-                        <p>2001</p>
+                <div class="liens">
+                        <a href="https://github.com/andreeavillatte">Visit my Github</a>
+                        <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+                        <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="light" data-vanity="andreea-villatte-49755226"><a class="LI-simple-link" href='https://ro.linkedin.com/in/andreea-britchi-49755226?trk=profile-badge'>Andreea Britchi</a></div>
                     </div>
-                    <div class="sec-droite">
-                        <p><span class="titre">Développeur Web et Web mobile</span><br/>
-                        La Manu, Amiens, France</p>
-                        <p><span class="titre">JHKJHKHKJ, Roumanie</span><br/>
-                        Formation de formateur, Diplôme de participation aux cours de formation professionnelle </p>
-                        <p><span class="titre">Communication, gestion et médiation des conflits</span><br/>
-                        Diplôme de participation aux cours de formation professionnelle, JHGJHGJHGJH, Roumanie</p>
-                        <p><span class="titre">ArcGIS Desktop I, II, III, Conception Géodatabase</span><br/>
-                        ESRI, Roumanie</p>
-                        <p><span class="titre">Licence + Master Ingénieur en Géodésie et Géomatique</span><br/>
-                        Géodésie, Photogrammétrie, Navigations, Ingénierie géodésique, Télédétection, Université de Stuttgart, Faculté de génie aérospatial et de géodésie, Géodésie et Géo-informatique, Allemagne</p>
-                        <p><span class="titre">Licence Ingénieur en Géodésie, Topographie, Photogrammétrie, Télédétection</span><br/>
-                        Université Technique de Constructions Bucarest, Faculté de Géodésie, Bucarest, Roumanie</p>
-                    </div>
+                <div class="photo">
+                    <a href="#">
+                        <img class="img-responsive img-rounded" src="website/Memento/assets/img/photo-cv.png" alt="Photo CV Andreea Villatte">
+                    </a>
                 </div>
             </div>
-            <div class="section">
-                <div class="experiences">
-                    <h2>EXPERIENCES PROFESSIONNELLES</h2>
-                    <div class="sec-gauche">
-                        <p>2019-Présent<br/><br/></p>
-                        <div id="exp-gauche">
-                        <p>01/2016 – 07/2017<br/><span class="duree">(18 mois)</span><br/></p>
-                        <p>04/2008 – 05/2013<br/><span class="duree">(6 ans)</span></p>
-                        <p>01/2011 – 09/2014<br/><span class="duree">(4 ans)</span></p>
-                        <p>03/2006 – 08/2006<br/><span class="duree">(5 mois)</span><br/></p>
-                        <p>11/2005 – 09/2007<br/><span class="duree">(2 ans)</span></p>
-                        <p>11/2002 – 12/2003<br/><span class="duree">(1 an)</span><br/></p>
-                        <p>11/2001 – 12/2005<br/><span class="duree">(4 ans)</span></p>
+        </header>
+        <section>
+            <nav>
+                <ul>
+                <li><a href="#">Experiences professionnelles</a></li>
+                <li><a href="#">Formation</a></li>
+                <li><a href="#">Competences linquistiques & informaatiques</a></li>
+                <li><a href="#">Publications, prox & centres d'interet</a></li>
+                </ul>
+            </nav>
+            
+            <article>
+                <div id="conteneur">
+                        <div class="section2">
+                            <div class="experiences">
+                                <h2>EXPERIENCES PROFESSIONNELLES</h2>
+                                <div class="sec-gauche">
+                                    <p>2019-Présent<br/><br/></p>
+                                    <div id="exp-gauche">
+                                    <p>01/2016 – 07/2017<br/><span class="duree">(18 mois)</span><br/></p>
+                                    <p>04/2008 – 05/2013<br/><span class="duree">(6 ans)</span></p>
+                                    <p>01/2011 – 09/2014<br/><span class="duree">(4 ans)</span></p>
+                                    <p>03/2006 – 08/2006<br/><span class="duree">(5 mois)</span><br/></p>
+                                    <p>11/2005 – 09/2007<br/><span class="duree">(2 ans)</span></p>
+                                    <p>11/2002 – 12/2003<br/><span class="duree">(1 an)</span><br/></p>
+                                    <p>11/2001 – 12/2005<br/><span class="duree">(4 ans)</span></p>
+                                    </div>
+                                </div>
+                                <div class="sec-droite">
+                                    <p><span class="titre">Institut_Picard_de_Langues.fr</span><br/>
+                                    Création du site</p>
+                                    <p><span class="titre">Géomaticien, ENEDIS (ancien ERDF), Amiens, France </span><br/>
+                                    Innovation, optimisation, contrôle qualité <br/><br/></p>
+                                    <p><span class="titre">Ingénieur en Géodésie et Géomatique, Centre National de Cartographie, Roumanie</span><br/>
+                                    Gestion technique de l’activité courante, coordination, guidance et contrôle de l’exécution des travaux de géodésie</p>  
+                                    <p><span class="titre">Conseiller interculturel, ICUnet.AG, Allemagne</span><br/>
+                                    Développement relations sociales, valorisation de l'intégration individuelle et collective </p>
+                                    <p><span class="titre">Contrôle qualité, Robert Bosch GmbH, Allemagne</span><br/>
+                                    Contrôle qualité </p>
+                                    <p><span class="titre">Contrôle qualité ISO, Fraunhofer Institute, IRB, Allemagne</span><br/>
+                                    Contrôle qualité ISO</p>
+                                    <p><span class="titre">Opérateur ligne de production, Daimler Chrysler AG, Allemagne</span><br/>
+                                    Opérateur ligne de production</p>
+                                    <p><span class="titre">Maître-assistant à l'université, Institut de Géodésie et Géophysique, Allemagne</span><br/>
+                                    Maître-assistant à l'université</p>   
+                                </div>
+                            </div>
+                        </div>
+                        <div class="section2">
+                        <div class="formation">
+                            <h2>FORMATION</h2>
+                            <div class="sec-gauche" id="forma-gauche">
+                                <p>2019</p>
+                                <p>2012</p>
+                                <p>2011</p>
+                                <p>2008</p>
+                                <p>2008</p>
+                                <p>2001</p>
+                            </div>
+                            <div class="sec-droite">
+                                <p><span class="titre">Développeur Web et Web mobile</span><br/>
+                                La Manu, Amiens, France</p>
+                                <p><span class="titre">JHKJHKHKJ, Roumanie</span><br/>
+                                Formation de formateur, Diplôme de participation aux cours de formation professionnelle </p>
+                                <p><span class="titre">Communication, gestion et médiation des conflits</span><br/>
+                                Diplôme de participation aux cours de formation professionnelle, JHGJHGJHGJH, Roumanie</p>
+                                <p><span class="titre">ArcGIS Desktop I, II, III, Conception Géodatabase</span><br/>
+                                ESRI, Roumanie</p>
+                                <p><span class="titre">Licence + Master Ingénieur en Géodésie et Géomatique</span><br/>
+                                Géodésie, Photogrammétrie, Navigations, Ingénierie géodésique, Télédétection, Université de Stuttgart, Faculté de génie aérospatial et de géodésie, Géodésie et Géo-informatique, Allemagne</p>
+                                <p><span class="titre">Licence Ingénieur en Géodésie, Topographie, Photogrammétrie, Télédétection</span><br/>
+                                Université Technique de Constructions Bucarest, Faculté de Géodésie, Bucarest, Roumanie</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="sec-droite">
-                        <p><span class="titre">Institut_Picard_de_Langues.fr</span><br/>
-                        Création du site</p>
-                        <p><span class="titre">Géomaticien, ENEDIS (ancien ERDF), Amiens, France </span><br/>
-                        Innovation, optimisation, contrôle qualité <br/><br/></p>
-                        <p><span class="titre">Ingénieur en Géodésie et Géomatique, Centre National de Cartographie, Roumanie</span><br/>
-                        Gestion technique de l’activité courante, coordination, guidance et contrôle de l’exécution des travaux de géodésie</p>  
-                        <p><span class="titre">Conseiller interculturel, ICUnet.AG, Allemagne</span><br/>
-                        Développement relations sociales, valorisation de l'intégration individuelle et collective </p>
-                        <p><span class="titre">Contrôle qualité, Robert Bosch GmbH, Allemagne</span><br/>
-                        Contrôle qualité </p>
-                        <p><span class="titre">Contrôle qualité ISO, Fraunhofer Institute, IRB, Allemagne</span><br/>
-                        Contrôle qualité ISO</p>
-                        <p><span class="titre">Opérateur ligne de production, Daimler Chrysler AG, Allemagne</span><br/>
-                        Opérateur ligne de production</p>
-                        <p><span class="titre">Maître-assistant à l'université, Institut de Géodésie et Géophysique, Allemagne</span><br/>
-                        Maître-assistant à l'université</p>   
-                    </div>
-                </div>
-            </div>
-            <div class="section">
-                <div class="competences">
-                    <h2>COMPETENCES LINGUISTIQUES & INFORMATIQUES</h2>
-                    <div class="sec-gauche">
-                        <p>Anglais :<br/>
-                        Allemand :<br/>
-                        Français :<br/>
-                        Roumain :</p>
-                        <p>Informatique :</p>
-                    </div>
-                    <div class="sec-droite">
-                        <div id="lang-droite">
-                        <p>Courant<br/>
-                        Courant<br/>
-                        Courant<br/>
-                        Langue maternelle</p>
-                        <div id="lang-droite-sub">
-                        <p>Maitrise de logiciels :<br/>
-                            SIG - QGIS, ArcGIS<br/>
-                            Microstation - Grande Echelle ELEC Atlas et Pacific, Mercator SIG-ELEC<br/>
-                            AutoCAD<br/>
-                            GNSS - Trimble Business Center, Leica Geo Office Combined, Topcon Tools, Javad Giodis, SkiPro, Applanix PosPac, Panda, LISA<br/>
-                            Pack Office – Word, Excel, Power Point, Outlook<br/>
-                            Traitement des textes<br/>
-                            Programmation SpatiaLite SQL, Excel VBA macros et TDC (Tableau croisée dynamique), HTML5, CSS3, ETC.<br/>
-                            Photoshop </p>
+                    <div class="section2">
+                        <div class="competences">
+                            <h2>COMPETENCES LINGUISTIQUES & INFORMATIQUES</h2>
+                            <div class="sec-gauche">
+                                <p>Anglais :<br/>
+                                Allemand :<br/>
+                                Français :<br/>
+                                Roumain :</p>
+                                <p>Informatique :</p>
+                            </div>
+                            <div class="sec-droite">
+                                <div id="lang-droite">
+                                <p>Courant<br/>
+                                Courant<br/>
+                                Courant<br/>
+                                Langue maternelle</p>
+                                    <div id="lang-droite-sub">
+                                        <p>Maitrise de logiciels :<br/>
+                                        SIG - QGIS, ArcGIS<br/>
+                                        Microstation - Grande Echelle ELEC Atlas et Pacific, Mercator SIG-ELEC<br/>
+                                        AutoCAD<br/>
+                                        GNSS - Trimble Business Center, Leica Geo Office Combined, Topcon Tools, Javad Giodis, SkiPro, Applanix PosPac, Panda, LISA<br/>
+                                        Pack Office – Word, Excel, Power Point, Outlook<br/>
+                                        Traitement des textes<br/>
+                                        Programmation SpatiaLite SQL, Excel VBA macros et TDC (Tableau croisée dynamique), HTML5, CSS3, ETC.<br/>
+                                        Photoshop </p>
+                                    </div>
+                                </div>
+                            </div>    
                         </div>
                     </div>    
-                </div>
-            </div>    
-            <div class="publications">
-                <div class="section">
-                    <h2>PUBLICATIONS, PRIX & CENTRES D'INTERET</h2>
-                    <div class="sec-gauche">
-                        <p>2017</p>
-                        <div id="interet-droite">
-                        <p>2013</p>
-                        </div>
-                        <div id="interet-droite-int"></div>
-                        <p>Intérèts</p>
+                    <div class="section2">
+                        <div class="publications">
+                            <h2>PUBLICATIONS, PRIX & CENTRES D'INTERET</h2>
+                            <div class="sec-gauche">
+                                <p>2017</p>
+                                <div id="interet-droite">
+                                <p>2013</p>
+                                </div>
+                                <div id="interet-droite-int"></div>
+                                <p>Intérèts</p>
+                            </div>
+                            </div>
+                            <div class="sec-droite">
+                                <p><span class="titre">1er prix Innovation</span><br/>
+                                Sur la fiabilité des bases de données ENEDIS Picardie: Automatisation des rapports mensuels du CTRL PGOC</p>
+                                <p><span class="titre">Publication: Instructions pratiques et méthodes de traitement des mesures GNSS - Trimble, Leica, Topcon</span><br/>
+                                    éditeur CNC, Bucarest, Roumanie</p>
+                                <p>La danse, Informatique, Lecture</p>   
+                            </div>
                         </div>
                     </div>
-                    <div class="sec-droite">
-                        <p><span class="titre">1er prix Innovation</span><br/>
-                        Sur la fiabilité des bases de données ENEDIS Picardie: Automatisation des rapports mensuels du CTRL PGOC</p>
-                        <p><span class="titre">Publication: Instructions pratiques et méthodes de traitement des mesures GNSS - Trimble, Leica, Topcon</span><br/>
-                            éditeur CNC, Bucarest, Roumanie</p>
-                        <p>La danse, Informatique, Lecture</p>   
-                    </div>
                 </div>
-            </div>
-        </div>
+            </article>
+        </section>
+        <footer>
+            <p>Footer</p>
+        </footer>
     </div>
 </body>
 </html>
