--- a/cv.html
+++ b/cv.html
@@ -13,18 +13,16 @@
         <header>
             <div class="conteneurheader">
                 <div class="info">
-                    <p><strong>Andreea VILLATTE</strong><br/>
-                    Développeur Web</p>
-                    <p>80000 Amiens <br/>
-                    +33 6 95 91 42 12 <br/>
-                    andreea.villatte@gmail.com</p>
-                    <p>Permis B (voiture)</p>
+                    <ul style="list-style-type:none;">
+                        <li><strong>Andreea VILLATTE</strong></li>
+                        <li>Développeur Web</li>
+                        <li>80000 Amiens</li>
+                        <li>____________</li>
+                        <li>+33 6 95 91 42 12</li>
+                        <li>____________</li>
+                        <li>Permis B (voiture)</li>
+                    </ul>
                 </div>
-                <div class="liens">
-                        <a href="https://github.com/andreeavillatte">Visit my Github</a>
-                        <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
-                        <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="light" data-vanity="andreea-villatte-49755226"><a class="LI-simple-link" href='https://ro.linkedin.com/in/andreea-britchi-49755226?trk=profile-badge'>Andreea Britchi</a></div>
-                    </div>
                 <div class="photo">
                     <a href="#">
                         <img class="img-responsive img-rounded" src="website/Memento/assets/img/photo-cv.png" alt="Photo CV Andreea Villatte">
@@ -35,74 +33,56 @@
         <section>
             <nav>
                 <ul>
-                <li><a href="#">Experiences professionnelles</a></li>
-                <li><a href="#">Formation</a></li>
-                <li><a href="#">Competences linquistiques & informaatiques</a></li>
-                <li><a href="#">Publications, prox & centres d'interet</a></li>
+                <li><a href="#experiences">Experiences professionnelles</a></li>
+                <li><a href="#competences">Competences linquistiques & informatiques</a></li>
+                <li><a href="#formation">Formation</a></li>
+                <li><a href="#publications">Publications, prox & centres d'interet</a></li>
                 </ul>
+
+                <p>----------------</p>
+                <h1>Liens proffessionaux</h1>
+                <div class="liens">
+                    <a href="https://github.com/andreeavillatte">Visit my Github</a>
+                    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+                    <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="light" data-vanity="andreea-villatte-49755226"><a class="LI-simple-link" href='https://ro.linkedin.com/in/andreea-britchi-49755226?trk=profile-badge'>Andreea Britchi</a></div>
+                </div>
+                <p><a href="src="website/Memento/assets/CV_papier_Andreea_Villatte.pdf">Télécharger mon CV papier</a></p>
             </nav>
             
             <article>
                 <div id="conteneur">
-                        <div class="section2">
-                            <div class="experiences">
-                                <h2>EXPERIENCES PROFESSIONNELLES</h2>
-                                <div class="sec-gauche">
-                                    <p>2019-Présent<br/><br/></p>
-                                    <div id="exp-gauche">
-                                    <p>01/2016 – 07/2017<br/><span class="duree">(18 mois)</span><br/></p>
-                                    <p>04/2008 – 05/2013<br/><span class="duree">(6 ans)</span></p>
-                                    <p>01/2011 – 09/2014<br/><span class="duree">(4 ans)</span></p>
-                                    <p>03/2006 – 08/2006<br/><span class="duree">(5 mois)</span><br/></p>
-                                    <p>11/2005 – 09/2007<br/><span class="duree">(2 ans)</span></p>
-                                    <p>11/2002 – 12/2003<br/><span class="duree">(1 an)</span><br/></p>
-                                    <p>11/2001 – 12/2005<br/><span class="duree">(4 ans)</span></p>
-                                    </div>
+                    <div class="section2">
+                        <div class="experiences">
+                            <h2>EXPERIENCES PROFESSIONNELLES</h2>
+                            <div class="sec-gauche">
+                                <p>2019-Présent<br/><br/></p>
+                                <div id="exp-gauche">
+                                <p>01/2016 – 07/2017<br/><span class="duree">(18 mois)</span><br/></p>
+                                <p>04/2008 – 05/2013<br/><span class="duree">(6 ans)</span></p>
+                                <p>01/2011 – 09/2014<br/><span class="duree">(4 ans)</span></p>
+                                <p>03/2006 – 08/2006<br/><span class="duree">(5 mois)</span><br/></p>
+                                <p>11/2005 – 09/2007<br/><span class="duree">(2 ans)</span></p>
+                                <p>11/2002 – 12/2003<br/><span class="duree">(1 an)</span><br/></p>
+                                <p>11/2001 – 12/2005<br/><span class="duree">(4 ans)</span></p>
                                 </div>
-                                <div class="sec-droite">
-                                    <p><span class="titre">Institut_Picard_de_Langues.fr</span><br/>
-                                    Création du site</p>
-                                    <p><span class="titre">Géomaticien, ENEDIS (ancien ERDF), Amiens, France </span><br/>
-                                    Innovation, optimisation, contrôle qualité <br/><br/></p>
-                                    <p><span class="titre">Ingénieur en Géodésie et Géomatique, Centre National de Cartographie, Roumanie</span><br/>
-                                    Gestion technique de l’activité courante, coordination, guidance et contrôle de l’exécution des travaux de géodésie</p>  
-                                    <p><span class="titre">Conseiller interculturel, ICUnet.AG, Allemagne</span><br/>
-                                    Développement relations sociales, valorisation de l'intégration individuelle et collective </p>
-                                    <p><span class="titre">Contrôle qualité, Robert Bosch GmbH, Allemagne</span><br/>
-                                    Contrôle qualité </p>
-                                    <p><span class="titre">Contrôle qualité ISO, Fraunhofer Institute, IRB, Allemagne</span><br/>
-                                    Contrôle qualité ISO</p>
-                                    <p><span class="titre">Opérateur ligne de production, Daimler Chrysler AG, Allemagne</span><br/>
-                                    Opérateur ligne de production</p>
-                                    <p><span class="titre">Maître-assistant à l'université, Institut de Géodésie et Géophysique, Allemagne</span><br/>
-                                    Maître-assistant à l'université</p>   
-                                </div>
-                            </div>
-                        </div>
-                        <div class="section2">
-                        <div class="formation">
-                            <h2>FORMATION</h2>
-                            <div class="sec-gauche" id="forma-gauche">
-                                <p>2019</p>
-                                <p>2012</p>
-                                <p>2011</p>
-                                <p>2008</p>
-                                <p>2008</p>
-                                <p>2001</p>
                             </div>
                             <div class="sec-droite">
-                                <p><span class="titre">Développeur Web et Web mobile</span><br/>
-                                La Manu, Amiens, France</p>
-                                <p><span class="titre">JHKJHKHKJ, Roumanie</span><br/>
-                                Formation de formateur, Diplôme de participation aux cours de formation professionnelle </p>
-                                <p><span class="titre">Communication, gestion et médiation des conflits</span><br/>
-                                Diplôme de participation aux cours de formation professionnelle, JHGJHGJHGJH, Roumanie</p>
-                                <p><span class="titre">ArcGIS Desktop I, II, III, Conception Géodatabase</span><br/>
-                                ESRI, Roumanie</p>
-                                <p><span class="titre">Licence + Master Ingénieur en Géodésie et Géomatique</span><br/>
-                                Géodésie, Photogrammétrie, Navigations, Ingénierie géodésique, Télédétection, Université de Stuttgart, Faculté de génie aérospatial et de géodésie, Géodésie et Géo-informatique, Allemagne</p>
-                                <p><span class="titre">Licence Ingénieur en Géodésie, Topographie, Photogrammétrie, Télédétection</span><br/>
-                                Université Technique de Constructions Bucarest, Faculté de Géodésie, Bucarest, Roumanie</p>
+                                <p><span class="titre">Institut_Picard_de_Langues.fr</span><br/>
+                                Création du site</p>
+                                <p><span class="titre">Géomaticien, ENEDIS (ancien ERDF), Amiens, France </span><br/>
+                                Innovation, optimisation, contrôle qualité <br/><br/></p>
+                                <p><span class="titre">Ingénieur en Géodésie et Géomatique, Centre National de Cartographie, Roumanie</span><br/>
+                                Gestion technique de l’activité courante, coordination, guidance et contrôle de l’exécution des travaux de géodésie</p>  
+                                <p><span class="titre">Conseiller interculturel, ICUnet.AG, Allemagne</span><br/>
+                                Développement relations sociales, valorisation de l'intégration individuelle et collective </p>
+                                <p><span class="titre">Contrôle qualité, Robert Bosch GmbH, Allemagne</span><br/>
+                                Contrôle qualité </p>
+                                <p><span class="titre">Contrôle qualité ISO, Fraunhofer Institute, IRB, Allemagne</span><br/>
+                                Contrôle qualité ISO</p>
+                                <p><span class="titre">Opérateur ligne de production, Daimler Chrysler AG, Allemagne</span><br/>
+                                Opérateur ligne de production</p>
+                                <p><span class="titre">Maître-assistant à l'université, Institut de Géodésie et Géophysique, Allemagne</span><br/>
+                                Maître-assistant à l'université</p>   
                             </div>
                         </div>
                     </div>
@@ -137,6 +117,35 @@
                             </div>    
                         </div>
                     </div>    
+                </div>
+                <div id="conteneur">
+                    <div class="section2">
+                        <div class="formation">
+                            <h2>FORMATION</h2>
+                            <div class="sec-gauche" id="forma-gauche">
+                                <p>2019</p>
+                                <p>2012</p>
+                                <p>2011</p>
+                                <p>2008</p>
+                                <p>2008</p>
+                                <p>2001</p>
+                            </div>
+                            <div class="sec-droite">
+                                <p><span class="titre">Développeur Web et Web mobile</span><br/>
+                                La Manu, Amiens, France</p>
+                                <p><span class="titre">JHKJHKHKJ, Roumanie</span><br/>
+                                Formation de formateur, Diplôme de participation aux cours de formation professionnelle </p>
+                                <p><span class="titre">Communication, gestion et médiation des conflits</span><br/>
+                                Diplôme de participation aux cours de formation professionnelle, JHGJHGJHGJH, Roumanie</p>
+                                <p><span class="titre">ArcGIS Desktop I, II, III, Conception Géodatabase</span><br/>
+                                ESRI, Roumanie</p>
+                                <p><span class="titre">Licence + Master Ingénieur en Géodésie et Géomatique</span><br/>
+                                Géodésie, Photogrammétrie, Navigations, Ingénierie géodésique, Télédétection, Université de Stuttgart, Faculté de génie aérospatial et de géodésie, Géodésie et Géo-informatique, Allemagne</p>
+                                <p><span class="titre">Licence Ingénieur en Géodésie, Topographie, Photogrammétrie, Télédétection</span><br/>
+                                Université Technique de Constructions Bucarest, Faculté de Géodésie, Bucarest, Roumanie</p>
+                            </div>
+                        </div>
+                    </div>
                     <div class="section2">
                         <div class="publications">
                             <h2>PUBLICATIONS, PRIX & CENTRES D'INTERET</h2>
@@ -145,9 +154,9 @@
                                 <div id="interet-droite">
                                 <p>2013</p>
                                 </div>
-                                <div id="interet-droite-int"></div>
+                                <div id="interet-droite-int">
                                 <p>Intérèts</p>
-                            </div>
+                                </div>
                             </div>
                             <div class="sec-droite">
                                 <p><span class="titre">1er prix Innovation</span><br/>
