--- a/cv.html
+++ b/cv.html
@@ -34,42 +34,25 @@
             <nav>
                 <ul>
                 <li><a href="#experiences">Experiences professionnelles</a></li>
-<<<<<<< HEAD
                 <li><a href="#formation">Formation</a></li>
                 <li><a href="#competences">Competences linquistiques & informatiques</a></li>
                 <li><a href="#publications">Publications, prox & centres d'interet</a></li>
                 </ul>
                 <p>----------------</p>
                 <p><strong>Liens proffessionaux</strong>
-=======
-                <li><a href="#competences">Competences linquistiques & informatiques</a></li>
-                <li><a href="#formation">Formation</a></li>
-                <li><a href="#publications">Publications, prox & centres d'interet</a></li>
-                </ul>
-
-                <p>----------------</p>
-                <h1>Liens proffessionaux</h1>
->>>>>>> faf2b956f0059d369bcf4e69ee738d318379eee1
                 <div class="liens">
+                    <a href="https://platform.linkedin.com/badges/js/profile.js" aria-label="LinkedIN"><img src="website/Memento/assets/img/logo_linkedin.png" alt=""></a>
+
                     <a href="https://github.com/andreeavillatte">Visit my Github</a>
-                    <script     src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
-                    <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="light" data-vanity="andreea-villatte-49755226"><a class="LI-simple-link" href='https://ro.linkedin.com/in/andreea-britchi-49755226?trk=profile-badge'>Andreea Britchi</a></div>
+                    <a href src="CV_papier_Andreea_Villatte.pdf" source="website/Memento/assets/CV_papier_Andreea_Villatte.pdf">Télécharger mon CV papier</a>
+
+                    <!-- <a href="http://info.template-help.com"><a title="" class="aalmanual manual" target="_blank" href="https://www.templatemonster.com">website templates</a> tutorials online</a> -->
                 </div>
-<<<<<<< HEAD
-                <p><a href src="CV_papier_Andreea_Villatte.pdf" source="website/Memento/assets/CV_papier_Andreea_Villatte.pdf">Télécharger mon CV papier</a></p>
             </nav>
             
             <article>
                 <div id="conteneur1">
                     <div class="art">
-=======
-                <p><a href="src="website/Memento/assets/CV_papier_Andreea_Villatte.pdf">Télécharger mon CV papier</a></p>
-            </nav>
-            
-            <article>
-                <div id="conteneur">
-                    <div class="section2">
->>>>>>> faf2b956f0059d369bcf4e69ee738d318379eee1
                         <div class="experiences">
                             <h2>EXPERIENCES PROFESSIONNELLES</h2>
                             <div class="sec-gauche">
@@ -86,9 +69,9 @@
                             </div>
                             <div class="sec-droite">
                                 <p><span class="titre">Institut_Picard_de_Langues.fr</span><br/>
-                                Création du site</p>
+                                Création du site <span><a href="https://ipl2.fr">https://ipl2.fr</a></span></p>
                                 <p><span class="titre">Géomaticien, ENEDIS (ancien ERDF), Amiens, France </span><br/>
-                                Innovation, optimisation, contrôle qualité <br/><br/></p>
+                                Innovation, optimisation, contrôle qualité <br/></p>
                                 <p><span class="titre">Ingénieur en Géodésie et Géomatique, Centre National de Cartographie, Roumanie</span><br/>
                                 Gestion technique de l’activité courante, coordination, guidance et contrôle de l’exécution des travaux de géodésie</p>  
                                 <p><span class="titre">Conseiller interculturel, ICUnet.AG, Allemagne</span><br/>
@@ -104,7 +87,6 @@
                             </div>
                         </div>
                     </div>
-<<<<<<< HEAD
                 </div>
                 <div id="conteneur2">
                     <div class="art">
@@ -120,7 +102,7 @@
                             </div>
                             <div class="sec-droite">
                                 <p><span class="titre">Développeur Web et Web mobile</span><br/>
-                                La Manu, Amiens, France</p>
+                                La Manu, Amiens, France <span><a href="https://lamanu.fr/amiens">https://lamanu.fr/amiens</a></span></p>
                                 <p><span class="titre">JHKJHKHKJ, Roumanie</span><br/>
                                 Formation de formateur, Diplôme de participation aux cours de formation professionnelle </p>
                                 <p><span class="titre">Communication, gestion et médiation des conflits</span><br/>
@@ -132,41 +114,9 @@
                                 <p><span class="titre">Licence Ingénieur en Géodésie, Topographie, Photogrammétrie, Télédétection</span><br/>
                                 Université Technique de Constructions Bucarest, Faculté de Géodésie, Bucarest, Roumanie</p>
                             </div>
-=======
-                    <div class="section2">
-                        <div class="competences">
-                            <h2>COMPETENCES LINGUISTIQUES & INFORMATIQUES</h2>
-                            <div class="sec-gauche">
-                                <p>Anglais :<br/>
-                                Allemand :<br/>
-                                Français :<br/>
-                                Roumain :</p>
-                                <p>Informatique :</p>
-                            </div>
-                            <div class="sec-droite">
-                                <div id="lang-droite">
-                                <p>Courant<br/>
-                                Courant<br/>
-                                Courant<br/>
-                                Langue maternelle</p>
-                                    <div id="lang-droite-sub">
-                                        <p>Maitrise de logiciels :<br/>
-                                        SIG - QGIS, ArcGIS<br/>
-                                        Microstation - Grande Echelle ELEC Atlas et Pacific, Mercator SIG-ELEC<br/>
-                                        AutoCAD<br/>
-                                        GNSS - Trimble Business Center, Leica Geo Office Combined, Topcon Tools, Javad Giodis, SkiPro, Applanix PosPac, Panda, LISA<br/>
-                                        Pack Office – Word, Excel, Power Point, Outlook<br/>
-                                        Traitement des textes<br/>
-                                        Programmation SpatiaLite SQL, Excel VBA macros et TDC (Tableau croisée dynamique), HTML5, CSS3, ETC.<br/>
-                                        Photoshop </p>
-                                    </div>
-                                </div>
-                            </div>    
->>>>>>> faf2b956f0059d369bcf4e69ee738d318379eee1
                         </div>
                     </div>
                 </div>
-<<<<<<< HEAD
                 <div id="conteneur3">
                     <div class="art">
                         <div class="competences">
@@ -220,62 +170,11 @@
                             </div>
                         </div>
                     </div>
-=======
-                <div id="conteneur">
-                    <div class="section2">
-                        <div class="formation">
-                            <h2>FORMATION</h2>
-                            <div class="sec-gauche" id="forma-gauche">
-                                <p>2019</p>
-                                <p>2012</p>
-                                <p>2011</p>
-                                <p>2008</p>
-                                <p>2008</p>
-                                <p>2001</p>
-                            </div>
-                            <div class="sec-droite">
-                                <p><span class="titre">Développeur Web et Web mobile</span><br/>
-                                La Manu, Amiens, France</p>
-                                <p><span class="titre">JHKJHKHKJ, Roumanie</span><br/>
-                                Formation de formateur, Diplôme de participation aux cours de formation professionnelle </p>
-                                <p><span class="titre">Communication, gestion et médiation des conflits</span><br/>
-                                Diplôme de participation aux cours de formation professionnelle, JHGJHGJHGJH, Roumanie</p>
-                                <p><span class="titre">ArcGIS Desktop I, II, III, Conception Géodatabase</span><br/>
-                                ESRI, Roumanie</p>
-                                <p><span class="titre">Licence + Master Ingénieur en Géodésie et Géomatique</span><br/>
-                                Géodésie, Photogrammétrie, Navigations, Ingénierie géodésique, Télédétection, Université de Stuttgart, Faculté de génie aérospatial et de géodésie, Géodésie et Géo-informatique, Allemagne</p>
-                                <p><span class="titre">Licence Ingénieur en Géodésie, Topographie, Photogrammétrie, Télédétection</span><br/>
-                                Université Technique de Constructions Bucarest, Faculté de Géodésie, Bucarest, Roumanie</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="section2">
-                        <div class="publications">
-                            <h2>PUBLICATIONS, PRIX & CENTRES D'INTERET</h2>
-                            <div class="sec-gauche">
-                                <p>2017</p>
-                                <div id="interet-droite">
-                                <p>2013</p>
-                                </div>
-                                <div id="interet-droite-int">
-                                <p>Intérèts</p>
-                                </div>
-                            </div>
-                            <div class="sec-droite">
-                                <p><span class="titre">1er prix Innovation</span><br/>
-                                Sur la fiabilité des bases de données ENEDIS Picardie: Automatisation des rapports mensuels du CTRL PGOC</p>
-                                <p><span class="titre">Publication: Instructions pratiques et méthodes de traitement des mesures GNSS - Trimble, Leica, Topcon</span><br/>
-                                    éditeur CNC, Bucarest, Roumanie</p>
-                                <p>La danse, Informatique, Lecture</p>   
-                            </div>
-                        </div>
-                    </div>
->>>>>>> faf2b956f0059d369bcf4e69ee738d318379eee1
                 </div>
             </article>
         </section>
         <footer>
-            <p>Footer</p>
+            <p>Copyright Andreea Villatte</p>
         </footer>
     </div>
 
