--- a/cv.html
+++ b/cv.html
@@ -35,18 +35,20 @@
                 <ul>
                 <li><a href="#experiences">Experiences professionnelles</a></li>
                 <li><a href="#formation">Formation</a></li>
-                <li><a href="#competences">Competences linquistiques & informatiques</a></li>
-                <li><a href="#publications">Publications, prox & centres d'interet</a></li>
+                <li><a href="#competences">Competences informatiques</a></li>
+                <li><a href="#competences">Competences linquistiques</a></li>
+                <li><a href="#competences">Publications</a></li>
+                <li><a href="#publications">Centres d'interet</a></li>
                 </ul>
                 <p>----------------</p>
-                <p><strong>Liens proffessionaux</strong>
+                <p><strong>Liens</strong>
                 <div class="liens">
-                    <a href="https://platform.linkedin.com/badges/js/profile.js" aria-label="LinkedIN"><img src="website/Memento/assets/img/logo_linkedin.png" alt=""></a>
-
-                    <a href="https://github.com/andreeavillatte">Visit my Github</a>
-                    <a href src="CV_papier_Andreea_Villatte.pdf" source="website/Memento/assets/CV_papier_Andreea_Villatte.pdf">Télécharger mon CV papier</a>
-
-                    <!-- <a href="http://info.template-help.com"><a title="" class="aalmanual manual" target="_blank" href="https://www.templatemonster.com">website templates</a> tutorials online</a> -->
+                    <ul>
+                        <li>Télécharger mon CV</li>
+                        <li><a href="website/Memento/assets/CV_papier_Andreea_Villatte.pdf" download="CV_Andreea_Villatte"><img src="website/Memento/assets/img/logo_cv.jpg" alt="HTML tutorial" style="width:90px;height:90px;border:0"></a></li>
+                        <li><a href="https://github.com/andreeavillatte"><img src="website/Memento/assets/img/logo_github.png" alt="HTML tutorial" style="width:84px;height:84px;border:0"></a></li>
+                        <li><a href="https://platform.linkedin.com/badges/js/profile.js"><img src="website/Memento/assets/img/logo_linkedin.png" alt="HTML tutorial" style="width:84px;height:84px;border:0"></a></li>
+                    </ul>    
                 </div>
             </nav>
             
@@ -120,45 +122,67 @@
                 <div id="conteneur3">
                     <div class="art">
                         <div class="competences">
-                            <h2>COMPETENCES LINGUISTIQUES & INFORMATIQUES</h2>
-                            <div class="sec-gauche">
-                                <p>Anglais :<br/>
-                                Allemand :<br/>
-                                Français :<br/>
-                                Roumain :</p>
-                                <p>Informatique :</p>
+                            <h2>COMPETENCES INFORMATIQUES</h2>
+                            <p><span class="titre">Logiciels SIG</span></p>
+                            <div class="flex-container-logiciels">
+                                <div>QGIS</div>
+                                <div>ArcGIS</div>
+                                <div>Microstation</div>
+                                <div>Atlas</div> 
+                                <div>Pacific</div> 
+                                <div>Mercator SIG-ELEC</div>
                             </div>
-                            <div class="sec-droite">
-                                <div id="lang-droite">
-                                <p>Courant<br/>
-                                Courant<br/>
-                                Courant<br/>
-                                Langue maternelle</p>
-                                    <div id="lang-droite-sub">
-                                        <p>Maitrise de logiciels :<br/>
-                                        SIG - QGIS, ArcGIS<br/>
-                                        Microstation - Grande Echelle ELEC Atlas et Pacific, Mercator SIG-ELEC<br/>
-                                        AutoCAD<br/>
-                                        GNSS - Trimble Business Center, Leica Geo Office Combined, Topcon Tools, Javad Giodis, SkiPro, Applanix PosPac, Panda, LISA<br/>
-                                        Pack Office – Word, Excel, Power Point, Outlook<br/>
-                                        Traitement des textes<br/>
-                                        Programmation SpatiaLite SQL, Excel VBA macros et TDC (Tableau croisée dynamique), HTML5, CSS3, ETC.<br/>
-                                        Photoshop </p>
-                                    </div>
-                                </div>
-                            </div>    
+                            <p><span class="titre">Logiciels CAD</span></p>
+                            <div class="flex-container-logiciels">
+                                <div>AutoCAD</div>
+                            </div>
+                            <p><span class="titre">Logiciels GNSS</span></p>
+                            <div class="flex-container-logiciels">
+                                <div>Trimble Business Center</div>
+                                <div>Leica Geo Office Combined</div>
+                                <div>Topcon Tools</div>
+                                <div>Javad Giodis</div>
+                                <div>SkiPro</div>
+                                <div>Applanix PosPac</div>
+                                <div>Panda</div>
+                                <div>LISA</div>
+                            </div>
+                            <p><span class="titre">Pack Office</span></p>
+                            <div class="flex-container-logiciels">
+                                <div>Word</div>
+                                <div>Excel</div>
+                                <div>Power Point</div>
+                                <div>Outlook</div> 
+                            </div>
+                            <p><span class="titre">Programmation</span></p>
+                            <div class="flex-container-logiciels">
+                                <div>SpatiaLite SQL</div>
+                                <div>Excel VBA macros</div>
+                                <div>TDC (Tableau croisée dynamique)</div>
+                                <div>HTML5</div> 
+                                <div>CSS3</div>
+                                <div>ETC...</div>
+                            </div>
+                            <p><span class="titre">Design</span></p>
+                            <div class="flex-container-logiciels">
+                                <div>Adobe Photoshop</div>
+                            </div>
                         </div>
                     </div> 
                     <div class="art">
                         <div class="publications">
-                            <h2>PUBLICATIONS, PRIX & CENTRES D'INTERET</h2>
+                            <h2>COMPETENCES LINGUISTIQUES</h2>
+                            <div class="flex-container-langues">
+                                <div><span class="titre">ANGLAIS</span><p><progress max="100" value="80"></progress><span> coursive</span></p></div>
+                                <div><span class="titre">ALLEMAND</span><p><progress max="100" value="80"></progress><span> coursive</span></p></div>
+                                <div><span class="titre">FRANCAIS</span><p><progress max="100" value="80"></progress><span> coursive</span></p></div>
+                                <div><span class="titre">ROUMAIN</span><p><progress max="100" value="100"></progress><span> langue maternelle</span></p></div>
+                            </div>
+                            <h2>PUBLICATIONS & PRIX</h2>
                             <div class="sec-gauche">
                                 <p>2017</p>
                                 <div id="interet-droite">
                                 <p>2013</p>
-                                </div>
-                                <div id="interet-droite-int">
-                                <p>Intérèts</p>
                                 </div>
                             </div>
                             <div class="sec-droite">
@@ -166,6 +190,12 @@
                                 Sur la fiabilité des bases de données ENEDIS Picardie: Automatisation des rapports mensuels du CTRL PGOC</p>
                                 <p><span class="titre">Publication: Instructions pratiques et méthodes de traitement des mesures GNSS - Trimble, Leica, Topcon</span><br/>
                                     éditeur CNC, Bucarest, Roumanie</p>
+                            </div>
+                            <h2>CENTRES D'INTERET</h2>
+                            <div class="sec-gauche">
+                                <p>Intérèts</p>
+                            </div>
+                            <div class="sec-droite">
                                 <p>La danse, Informatique, Lecture</p>   
                             </div>
                         </div>
@@ -174,10 +204,9 @@
             </article>
         </section>
         <footer>
-            <p>Copyright Andreea Villatte</p>
+            <a href="https://github.com/andreeavillatte">
+                <img src="website/Memento/assets/img/logo_copyright.jpeg" alt="Copyright Andreea Villatte"></a>
         </footer>
     </div>
-
-           
 </body>
 </html>
