sans media querries

--- a/cv.html
+++ b/cv.html
@@ -204,8 +204,9 @@
             </article>
         </section>
         <footer>
-            <a href="https://github.com/andreeavillatte">
-                <img src="website/Memento/assets/img/logo_copyright.jpeg" alt="Copyright Andreea Villatte"></a>
+            <div>
+                <a href="https://github.com/andreeavillatte"><img src="website/Memento/assets/img/logo_copyright.jpeg" alt="Copyright Andreea  dvdVillatte"></a>
+            </div>
         </footer>
     </div>
 </body>
